--- a/app/globals.css
+++ b/app/globals.css
@@ -11,24 +11,15 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+body{
+  background-color: #E9FAE5;
+  color: #061103;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-nav {
-  height: auto;
 }
